--- a/weather.html
+++ b/weather.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Weather App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="weather.css">
+        <link rel="stylesheet" href="weather.css" media="screen">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,7 +27,7 @@
                 <div id="centi">No information</div>
                 <div id="farh">No information</div>
             </div>
-            <br>
+            
             <div id="desc">null</div>
             
             </div>
